WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205703
B3::ReduceLoopStrength should not do range based iteration on a vector it's mutating
https://bugs.webkit.org/show_bug.cgi?id=205703
Summary
B3::ReduceLoopStrength should not do range based iteration on a vector it's m...
Saam Barati
Reported
2020-01-02 17:17:29 PST
...
Attachments
patch
(3.39 KB, patch)
2020-01-02 17:28 PST
,
Saam Barati
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2020-01-02 17:18:30 PST
<
rdar://problem/56459483
>
Saam Barati
Comment 2
2020-01-02 17:28:11 PST
Created
attachment 386649
[details]
patch
Mark Lam
Comment 3
2020-01-02 17:29:42 PST
Comment on
attachment 386649
[details]
patch r=me
WebKit Commit Bot
Comment 4
2020-01-03 01:32:31 PST
The commit-queue encountered the following flaky tests while processing
attachment 386649
[details]
: highlight/highlight-world-leak.html
bug 205643
(author:
megan_gardner@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2020-01-03 01:32:44 PST
The commit-queue encountered the following flaky tests while processing
attachment 386649
[details]
: fetch/fetch-worker-crash.html
bug 187257
(author:
youennf@gmail.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6
2020-01-03 02:06:06 PST
The commit-queue encountered the following flaky tests while processing
attachment 386649
[details]
: highlight/highlight-world-leak.html
bug 205643
(author:
megan_gardner@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 7
2020-01-03 02:06:57 PST
Comment on
attachment 386649
[details]
patch Clearing flags on attachment: 386649 Committed
r253994
: <
https://trac.webkit.org/changeset/253994
>
WebKit Commit Bot
Comment 8
2020-01-03 02:06:58 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug