B3::ReduceLoopStrength should not do range based iteration on a vector it's mutating https://bugs.webkit.org/show_bug.cgi?id=205703 <rdar://problem/56459483>

Reviewed by Mark Lam.

JSTests:

* stress/dont-range-based-iterate-vector-that-is-mutated.js: Added.
(foo):

Source/JavaScriptCore:

B3::ReduceLoopStrength had code that did:
```
for (BasicBlock* pred : loopPostfooter->predecessors())
    loopPostfooter->removePredecessor(pred);
```

This is wrong, since it's doing a range based iteration over the vector it is
mutating. The fix is to just do:
```
while (loopPostfooter->predecessors().size())
    loopPostfooter->removePredecessor(loopPostfooter->predecessors()[0]);
```

* b3/B3ReduceLoopStrength.cpp:
(JSC::B3::ReduceLoopStrength::reduceByteCopyLoopsToMemcpy):


Canonical link: https://commits.webkit.org/218870@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253994 268f45cc-cd09-0410-ab3c-d52691b4dbfc